# FastCosyVoice

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_basic.py  run_fast.py  run_offline.py
cosyvoice/utils/: file_utils.py  frontend_utils.py
debug/: README.md
fastcosyvoice/: cosyvoice.py  model.py
runtime/triton_trtllm/: Dockerfile  Makefile  docker-compose.yaml  run.sh
runtime/triton_trtllm/model_repo/audio_tokenizer/1/: model.py
runtime/triton_trtllm/model_repo/cosyvoice2/: config.pbtxt
runtime/triton_trtllm/model_repo/cosyvoice2/1/: model.py
runtime/triton_trtllm/model_repo/cosyvoice2/1/cosyvoicelib/: audio_tokenizer.py  features.py  llm.py  speaker_embedding.py  token2wav.py
runtime/triton_trtllm/model_repo/token2wav/: config.pbtxt
runtime/triton_trtllm/model_repo/token2wav/1/: model.py
runtime/triton_trtllm/model_repo/token2wav/1/token2wav_lib/: cosyvoice2.py
runtime/triton_trtllm/model_repo_cosyvoice3/audio_tokenizer/1/: model.py
runtime/triton_trtllm/model_repo_cosyvoice3/cosyvoice3/1/cosyvoicelib/: token2wav.py
runtime/triton_trtllm/model_repo_cosyvoice3/speaker_embedding/1/: model.py
