[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning<2", "cython"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["cosyvoice*", "fastcosyvoice*"]

[project]
name = "fastcosyvoice"
version = "0.1.0"
description = "Faster inference for CoxyVoice3"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "conformer~=0.3",
    "diffusers~=0.36",
    "hydra-core~=1.3",
    "inflect~=7.5",
    "librosa~=0.11",
    "matcha-tts~=0.0.7",
    "modelscope~=1.33",
    "numpy<2.0",
    "onnx~=1.19",
    # "onnxruntime==1.21.1", cannot have both onnxruntime and onnxruntime-gpu
    "onnxruntime-gpu~=1.21",
    "pyworld~=0.3",
    "silero-stress~=1.3",
    "torch~=2.7",
    "torchaudio~=2.7",
    "torchvision~=0.22",
    "torchcodec~=0.9",
    "transformers~=4.53",
    "wetext~=0.1.2",
    "x-transformers>=2.11.24",
    "s3tokenizer",
    "hyperpyyaml~=1.2",
    "openai-whisper>=20250625",
]

[dependency-groups]
dev = [
    "gdown~=5.2",
    "fastcosyvoice",
    "tensorrt-llm==1.0.0",
    "omegaconf~=2.3",
    "lightning~=2.6",
    "wget~=3.2",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
name = "nvidia"
explicit = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch-cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
tensorrt-llm = { index = "nvidia" }
fastcosyvoice = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
]

